force-app/main/default/objects/GroupedAccountProductRevenue__c/GroupedAccountProductRevenue__c.object-meta.xml
<CustomObject>
    <description>Consolidates monthly revenue figures for a given account and product for a specified financial year. It  includes values from child accounts and related products. Used to calculate retained and incremental revenue for opportunities and to track sales forecasts against actuals.</description>
    <label>Grouped Account Product Revenue</label>
    <nameField>
        <displayFormat>APR-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GroupedAccountProductRevenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>