force-app/main/default/objects/GroupedAccountProductRevenue__c/fields/AnchorOrganisation__c.field-meta.xml
<CustomField>
    <fullName>AnchorOrganisation__c</fullName>
    <description>This field identifies the &apos;Anchor&apos; account for the revenue summary. Sales revenue from all associated child accounts within the hierarchy will be aggregated.</description>
    <inlineHelpText>Select the &apos;Anchor&apos; account for this revenue summary. All revenue from linked child accounts in the hierarchy will be included in this aggregation.</inlineHelpText>
    <label>Anchor Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GroupedAccountProductRevenues</relationshipLabel>
    <relationshipName>GroupedAccountProductRevenues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>