force-app/main/default/objects/GroupedAccountProductRevenue__c/fields/PrimaryProduct__c.field-meta.xml
<CustomField>
    <fullName>PrimaryProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field identifies the &apos;Primary Product&apos; for the revenue summary. Sales revenue from all associated related products will be aggregated based on this primary product reference</description>
    <inlineHelpText>Select the primary Product for aggregation. Revenues from related products will be consolidated under this reference</inlineHelpText>
    <label>Primary Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>GroupedAccountProductRevenues</relationshipLabel>
    <relationshipName>GroupedAccountProductRevenues</relationshipName>
    <type>Lookup</type>
</CustomField>