force-app/main/default/objects/GroupedAccountProductRevenue__c/fields/Rev10__c.field-meta.xml
<CustomField>
    <fullName>Rev10__c</fullName>
    <description>This field captures the total revenue for the month of October.</description>
    <inlineHelpText>Enter the total revenue for October.</inlineHelpText>
    <label>Revenue October</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>