force-app/main/default/objects/GroupedAccountProductRevenue__c/fields/Rev11__c.field-meta.xml
<CustomField>
    <fullName>Rev11__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field captures the total revenue for the month of November.</description>
    <inlineHelpText>Enter the total revenue for November.</inlineHelpText>
    <label>Revenue November</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>