force-app/main/default/objects/GroupedAccountProductRevenue__c/fields/Rev12__c.field-meta.xml
<CustomField>
    <fullName>Rev12__c</fullName>
    <description>This field captures the total revenue for the month of December.</description>
    <inlineHelpText>Enter the total revenue for December.</inlineHelpText>
    <label>Revenue December</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>