force-app/main/default/objects/GroupedAccountProductRevenue__c/fields/Total_FY__c.field-meta.xml
<CustomField>
    <fullName>Total_FY__c</fullName>
    <description>total revenue for the financial year</description>
    <formula>Rev1__c + Rev2__c + Rev3__c +Rev4__c + Rev5__c + Rev6__c + Rev7__c + Rev8__c + Rev9__c +Rev10__c + Rev11__c + Rev12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total revenue for the financial year.</inlineHelpText>
    <label>Total (FY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>