force-app/main/default/objects/GroupedAccountProductRevenue__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>UID</label>
    <length>34</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>