force-app/main/default/objects/GroupedAccountProductRevenue__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <description>A formula field used by Apex to construct maps to identify records.</description>
    <formula>AnchorOrganisation__c +  PrimaryProduct__c +  TEXT(FinancialYear__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A formula field used by Apex to construct maps to identify records.</inlineHelpText>
    <label>UniqueId</label>
    <type>Text</type>
</CustomField>